<resources>
    <string name="app_name">Tamazuj</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="signIn">Sign In</string>
    <string name="emailHint">email@email.email</string>
    <string name="passwordHint">*************</string>
    <string name="forgetPassword">Forget password</string>
    <string name="sign">Sign</string>
    <string name="dontHaveAccount">Don`t have account?</string>
    <string name="signFromHere">Sign from here</string>
    <string name="signUp">Sign up</string>
    <string name="nameHint">Full name</string>
    <string name="confirmPasswordHint">Confirm password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="agreePrivecyPolicy">When you sign up in this program you must agree our privecy policy</string>
    <string name="haveAccount">you have an account?</string>
    <string name="login">sign</string>
    <string name="clickHere">click here</string>
    <string name="selectAccountType">Select account type</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="DoYouNeedAnAdvisor">Do you need an advisor?</string>
    <string name="advisor">Advisor</string>
    <string name="consultYourBeneficiaries">Consult your beneficiaries</string>
    <string name="consultApplication">Consult application</string>
    <string name="warning">warning</string>
    <string name="completeProfile">Please complete your profile</string>
    <string name="completeTheProfile">Complete profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="consultApplications">Consult applications</string>
    <string name="clearAll">Clear all</string>
    <string name="oldNotifications">Old notifications</string>
    <string name="newNotifications">New notifications</string>
    <string name="notificationTime">since 1 mint</string>
    <string name="finished">finished</string>
    <string name="scheduled">scheduled</string>
    <string name="myConsult">My consult</string>
    <string name="myAccount">My account</string>
    <string name="myConsultRecord">My consulting record</string>
    <string name="aboutApp">About app</string>
    <string name="settings">Settings</string>
    <string name="attachments">Attachments</string>
    <string name="_84_percent_of">84% percent of</string>
    <string name="abu_dall_mohammed_omar">abu dall mohammed omar</string>
    <string name="educational_consultant_holding_an_international_certificate_in_education">
        Educational consultant holding an international certificate in education</string>
    <string name="ask_for_advice">Ask for advice</string>
    <string name="Areas_of_Counseling">Areas of Counseling</string>
    <string name="dist">Distinguished Advisors</string>
    <string name="asteshart_ame">My Consultancy</string>
    <string name="editMyInformation">Edit my information</string>
    <string name="gender">Gender</string>

    <string name="nationality">Nationality</string>
    <string name="birthDate">Birth date</string>
    <string name="learning">Learning level</string>
    <string name="job">Job</string>
    <string name="socialState">Social state</string>
    <string name="approval">Approval</string>
    <string name="changePassword">Change password</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="male">male</string>
    <string name="sudia">Sudia</string>
    <string name="sudiaArabia">Sudia Arabia</string>
    <string name="married">married</string>
    <string name="privacy_work">Work in private sector</string>
    <string name="language">Arabic-English</string>
    <string name="date_dat">06/05/1989</string>
    <string name="family_consultane">Family consultane</string>
    <string name="connected">Connected</string>
    <string name="youAreAvailableToConsultNow">You are available to consult now</string>
    <string name="fullNameRequired">Full name is required!</string>
    <string name="emailRequired">Email is requied!</string>
    <string name="passwordRequired">Password is required!</string>
    <string name="confirmPasswordRequired">Confirm Password is required!</string>
    <string name="confirmPasswordNotMatchesPassword">Please make sure the password matches confirm password</string>
    <string name="phoneRequired">Phone number is required!</string>
    <string name="notificationText">this text is an example to text maybe exchange in the same area</string>
    <string name="BA">BA</string>
    <string name="identity">Identity</string>
    <string name="qualification">Qualification</string>
    <string name="cv">Curriculum Vitae (CV)</string>
    <string name="oldPasswordRequired">Old password is required !</string>
    <string name="newPasswordRequired">New password is required !</string>
    <string name="oldPasswordMatchesnewPassword">new password must be diffirent than old password</string>
    <string name="bill">Bill</string>
    <string name="payBill">Pay</string>
    <string name="consultType">Consult type</string>
    <string name="timePeriod">Time period</string>
    <string name="cost">Cost</string>
    <string name="mint30">30 Mints</string>
    <string name="RS50">50 R.S</string>
    <string name="mint60">60 Mints</string>
    <string name="RS100">100 R.S</string>
    <string name="mint120">120 Mints</string>
    <string name="RS200">200 R.S</string>
    <string name="RS500">500 R.S</string>
    <string name="payWay">Pay way</string>
    <string name="startSession">Start session</string>
    <string name="successPayed">Success payed</string>
    <string name="success">success</string>
    <string name="sessionTime">وقت الجلسة</string>
    <string name="mint">دقيقة </string>
    <string name="v30">30</string>
    <string name="sessionExtension">Sessione xtension</string>
    <string name="writeYourMessageHere">Write your message here</string>
    <string name="beneficiariesFeedback">تقييمك للخدمة</string>
    <string name="FeedbackTime">FeedbackTime</string>
    <string name="happy">happy</string>
    <string name="catogoryname">Select the advisor</string>
    <string name="ratePercent">84% </string>
    <string name="beneficiarieSatisfaction">Beneficiaries satisfaction</string>
    <string name="advisorReviews"> Beneficiaries reviews </string>
    <string name="advisorAbout">About advisor</string>
    <string name="askConsult">Ask your consult</string>
    <string name="firstSession">firstSession</string>
    <string name="specialSession">specialSession</string>
    <string name="thirdSession">thirdSession</string>
    <string name="secondSession">secondSession</string>
    <string name="self">self</string>
    <string name="time">time</string>
    <string name="esaIbraheem">Esa Ibraheem</string>
    <string name="advisorDescription">  Educational consultant holding an international certificate in education</string>
    <string name="filter">filter</string>
    <string name="save">save</string>
    <string name="percent_satfication">percent_satfication</string>
    <string name="status">status</string>
    <string name="choose_consultant_type">choose_consultant_type</string>
    <string name="choose_advivsor">choose advisor </string>
    <string name="catogory_name">تطوير الذات</string>
    <string name="load_login">please wait  to verify the data.....</string>
    <string name="enter__correct_email">please enter correct email</string>
    <string name="code">Activation Code</string>
    <string name="activate_account">Activate The Account</string>
    <string name="codeRequired">Activation Code Required</string>
    <string name="exist_message">Exist successfully</string>
    <string name="not_exist_message">failed to  exist!</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="exist_message_tiltle">do you want to exist?</string>
    <string name="resetpass">Reset Password</string>
    <string name="not_update">the data not updated</string>
    <string name="load_data">please wait .....the data is loading</string>
    <string name="no_internet">No Internet Connection </string>
    <string name="female">female</string>
    <string name="Married">Married</string>
    <string name="Divorced">Divorced</string>
    <string name="single">single</string>
    <string name="widow">widow</string>
    <string name="high_schoole">    ثانوية عامة</string>
    <string name="ba">بكالوريوس</string>
    <string name="ma">ماجستير</string>
    <string name="phd">دكتوراه</string>
    <string name="resetcode">Reset Code</string>
    <string name="nodatachanged">لم يتم تحديث البيانات لعمل تحديث</string>
    <string name="savedata">please wait ........Now saving data</string>
    <string name="currancy">SR</string>
    <string name="work">Work</string>
    <string name="notwork">Not Work</string>
    <string name="work_private_sector">Work in private sector</string>
    <string name="selectone">Select </string>
    <string name="choose_lang">Choose Lanaguage</string>
    <string name="choose_lanague">Choose Language</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Weather</string>
</resources>
