<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="@dimen/activity_vertical_margin_medium">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:src="@drawable/cancle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvChangePassword"
        android:text="@string/changePassword"
        android:textSize="@dimen/text_header_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin_medium"
        android:background="@drawable/edit_text_boarder"
        android:hint="@string/oldPassword"
        android:inputType="textPassword"
        android:padding="@dimen/activity_vertical_margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <EditText android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin_medium"
        android:background="@drawable/edit_text_boarder"
        android:hint="@string/newPassword"
        android:padding="@dimen/activity_vertical_margin_medium"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oldPassword"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_medium"
        android:background="@drawable/edit_text_boarder"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:padding="@dimen/activity_vertical_margin_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_medium"
        android:background="@drawable/button_boarder"
        android:padding="@dimen/activity_vertical_margin_medium"
        android:text="@string/approval"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        />
</android.support.constraint.ConstraintLayout>