<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/reviewContainer">

    <ImageView
        android:id="@+id/beneficiarieFeedbackImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin_medium"
        android:src="@drawable/advisorreview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beneficiarieFeedbackTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin_small"
        android:text="@string/FeedbackTime"
        app:layout_constraintStart_toEndOf="@+id/beneficiarieFeedbackImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beneficiarieName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin_small"
        android:text="@string/esaIbraheem"
        app:layout_constraintBottom_toBottomOf="@+id/beneficiarieFeedbackImage"
        app:layout_constraintStart_toEndOf="@+id/beneficiarieFeedbackImage"
        app:layout_constraintTop_toBottomOf="@+id/beneficiarieFeedbackTime" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feedbackIcon"
        android:src="@drawable/love"
        app:layout_constraintBottom_toBottomOf="@+id/beneficiarieName"
        app:layout_constraintStart_toEndOf="@+id/beneficiarieName"
        app:layout_constraintTop_toBottomOf="@+id/beneficiarieFeedbackTime"
        android:layout_marginStart="@dimen/activity_vertical_margin_large"/>

    <TextView
        android:id="@+id/feedbackRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin_small"
        android:text="@string/happy"
        app:layout_constraintBottom_toBottomOf="@+id/beneficiarieName"
        app:layout_constraintStart_toEndOf="@+id/feedbackIcon"
        app:layout_constraintTop_toBottomOf="@+id/beneficiarieFeedbackTime"
        android:layout_marginStart="@dimen/activity_vertical_margin_medium"/>


    <TextView
        android:id="@+id/feedbackBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="@dimen/activity_vertical_margin_medium"
        android:text="@string/notificationText"
        app:layout_constraintStart_toStartOf="@+id/beneficiarieName"
        app:layout_constraintTop_toBottomOf="@+id/beneficiarieName" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedbackBody" />

</android.support.constraint.ConstraintLayout>