<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SuccessPayFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarSuccessPay"
        style="@style/Theme.AppCompat.Light.DarkActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbarGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/bill"
                android:textSize="@dimen/text_header_size" />

            <ImageButton
                android:id="@+id/buttonSuccessPayCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/activity_vertical_margin_medium"
                android:background="#00000000"
                android:src="@drawable/cancle" />
        </RelativeLayout>


    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/successPayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successPayed"
        android:textSize="@dimen/text_large_size"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSuccessPay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin_xxxlarge"
 />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/success"
        android:text="@string/success"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/text_xxlarge_size"
        app:layout_constraintTop_toBottomOf="@+id/successPayed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <android.support.v7.widget.CardView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorWhite"
        app:cardElevation="10dp"
        android:elevation="8dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:clipToPadding="false"
        android:clipChildren="false"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/cardViewBillDetails"
        app:cardCornerRadius="5dp"
        android:layout_marginStart="@dimen/activity_vertical_margin_medium"
        app:layout_constraintTop_toBottomOf="@+id/success"
        android:layout_marginTop="@dimen/activity_vertical_margin_xxxlarge"
        android:layout_marginEnd="@dimen/activity_vertical_margin_medium"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/activity_vertical_margin_medium">

            <ImageView
                android:id="@+id/billDetailsIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/cost"
                android:layout_margin="@dimen/activity_vertical_margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvBillDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost"
                android:textSize="@dimen/text_large_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/billDetailsIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvBillSupDetails"
                android:layout_marginStart="@dimen/activity_vertical_margin_medium"/>

            <TextView
                android:id="@+id/tvBillSupDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_xlarge_size"
                android:textColor="@color/colorBlue"
                android:text="@string/RS50"
                app:layout_constraintStart_toEndOf="@+id/billDetailsIcon"
                app:layout_constraintTop_toBottomOf="@+id/tvBillDetails"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="@dimen/activity_vertical_margin_medium"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStartSession"
        android:layout_margin="@dimen/activity_vertical_margin_large"
        android:background="@drawable/button_boarder"
        android:padding="@dimen/activity_vertical_margin_medium"
        android:text="@string/startSession"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>